:lipstick: Fix header hover spacing & footer align

--- a/style/style.css
+++ b/style/style.css
@@ -13,7 +13,7 @@ header {
   justify-content: space-between;
   align-items: center;
   background-color: var(--secondary);
-  padding: 8px 70px;
+  padding: 0px 70px;
 }
 
 .header-left-container {
@@ -53,7 +53,7 @@ header {
 
 .nav-section {
   color: var(--main_white);
-  padding: 10px;
+  padding: 20px;
   background: none;
   border: none;
   font: inherit;
@@ -175,6 +175,10 @@ footer {
 
 .footer-section h3 {
   text-align: center;
+}
+
+.footer-section ul {
+  padding-inline-start: 0;
 }
 
 .footer-section ul li {
